--- a/css/350px.css
+++ b/css/350px.css
@@ -1,6 +1,6 @@
 @media screen and (max-width:767px){
     *{
-        font-size: 20px
+        font-size: 2rem
     }
     header, main> div, footer{
         padding: 5vw
@@ -9,15 +9,15 @@
       max-width: 600px;
     }
     h1 {
-        font-size: 40px
+        font-size: 4rem
     }
     
     h2{
-        font-size: 27px;
+        font-size: 2.7rem;
         width: 100%
     }
     h3, .small, .coment .block_text> p, footer *{
-        font-size: 16px
+        font-size: 1.6rem
     }
     header{
          background-image: url(../img/rice_field_mob.png);
